Add google site verification code.

--- a/tmpl/index.html.tmpl
+++ b/tmpl/index.html.tmpl
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <link href="atom.xml" rel="alternate" type="application/atom+xml"
         title="Atom feed" />
+  <meta name="google-site-verification" content="uccnKRA9RROFoCKOUV-v_MzMITxt2cML-z2deDqZ62Y" />
   <meta name="generator" content="<TMPL_VAR generator ESCAPE="HTML">" />
   <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
