Add FSF membership campaign.

--- a/tmpl/index.html.tmpl
+++ b/tmpl/index.html.tmpl
@@ -78,6 +78,14 @@
           </ul>
         </li>
         <li>
+          <script type="text/javascript">
+            var fsf_widget_size = "normal";
+            var fsf_associate_id = "7019";
+          </script>
+          <script type="text/javascript"
+                  src="http://www.fsf.org/graphics/widget/global/widget.js"></script>
+        </li>
+        <li>
           <h2>Subscriptions (<a href="opml.xml">OPML</a>)</h2>
           <ul>
             <TMPL_LOOP Channels>
