Link to Chinese planet from main page. Update .gitignore for Chinese planet.

--- a/tmpl/index.html.tmpl
+++ b/tmpl/index.html.tmpl
@@ -70,6 +70,7 @@
             <li>logo by <a href="http://www.ee.ryerson.ca/~elf/">Luis Fernandes</a></li>
             <li><a href="/">en</a> run by <a href="http://edward.oconnor.cx/">Edward O'Connor</a></li>
             <li><a href="/ru/">ru</a> run by <a href="http://alexott-ru.blogspot.com/">Alex Ott</a></li>
+            <li><a href="/zh/">ru</a> run by <a href="https://github.com/RenWenshan">Wenshan</a></li>
           </ul>
         </li>
         <li>
