--- a/tmpl/index.html.tmpl
+++ b/tmpl/index.html.tmpl
@@ -2,6 +2,7 @@
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+  <meta name="viewport" content="width=device-width"/>
   <title><TMPL_VAR name></title>
   <link rel="stylesheet" type="text/css" href="/style.css"/>
   <link href="atom.xml" rel="alternate" type="application/atom+xml"
