--- a/html/style.css
+++ b/html/style.css
@@ -1,7 +1,7 @@
 /* Begin Typography & Colors */
 
 body {
-  font-size: 87.5%;
+  font-size: 100%;
   background-color: #fff;
   color: #333;
   text-align: center;
@@ -192,7 +192,7 @@ body {
   background-color: #66c;
   color: #fff;
   width: 100%;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .post .entry h2 {
@@ -205,7 +205,7 @@ body {
   border-right: 4px solid #eee;
   padding-left: 1em;
   padding-right: 1em;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .entry pre {
@@ -555,5 +555,5 @@ kbd {
 cursor {
     color: #fff;
     background-color: #000;
-    overflow: hidden;
+    overflow: scroll;
 }
