Fix my name on the main page.

--- a/tmpl/index.html.tmpl
+++ b/tmpl/index.html.tmpl
@@ -69,7 +69,7 @@
             <li><a type="application/atom+xml" href="atom.xml" rel="alternate"><img src="/feed-icon-14x14.png" alt="Atom feed" /></a></li>
             <li>powered by <a href="http://intertwingly.net/code/venus/">Planet Venus</a></li>
             <li>logo by <a href="http://www.ee.ryerson.ca/~elf/">Luis Fernandes</a></li>
-            <li><a href="/">en</a> run by <a href="http://edward.oconnor.cx/">Edward O'Connor</a></li>
+            <li><a href="/">en</a> run by <a href="http://tess.oconnor.cx/">Theresa O'Connor</a></li>
             <li><a href="/ru/">ru</a> run by <a href="http://alexott-ru.blogspot.com/">Alex Ott</a></li>
             <li><a href="/zh/">zh</a> run by <a href="https://github.com/RenWenshan">Wenshan</a></li>
           </ul>
